--- a/privacy-engineer.html
+++ b/privacy-engineer.html
@@ -88,7 +88,7 @@ application. Resume/CV ?. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
-<h5><a href='https://formstack.applytojob.com/apply/okWvPyTidz/Privacy-And-Compliance-Analyst?source=GS'>Privacy and Compliance Analyst - Formstack - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://formstack.applytojob.com/apply/okWvPyTidz/Privacy-And-Compliance-Analyst?source=GS'>Privacy and Compliance Analyst - Formstack - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Sep 29, 2019 ... Apply to Privacy and Compliance Analyst at Formstack in (Multiple states).</p>
 <hr/>
@@ -206,7 +206,7 @@ trust?...</p>
 <p><span class="badge badge-light">Toronto Vancouver Canada Berlin</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/mozilla/jobs/1810105'>Job Application for Trust & Privacy Analyst at Mozilla</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/mozilla/jobs/1810105'>Job Application for Trust & Privacy Analyst at Mozilla</a></h5> 
 <p><span class="badge badge-light">San Francisco Mountain View</span></p>
 <p>Posted on: 2019-09-05</p>
 <hr/>
@@ -218,7 +218,7 @@ trust?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/palantir/5dd0125b-3eb1-4b3e-8386-fbab7dd5adfb'>Palantir Technologies - Privacy and Civil Liberties Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/palantir/5dd0125b-3eb1-4b3e-8386-fbab7dd5adfb'>Palantir Technologies - Privacy and Civil Liberties Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-09-04</p>
 <hr/>
@@ -314,7 +314,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://vodafone.referrals.selectminds.com/jobs/privacy-operations-specialist-57814'>Privacy Operations Specialist - Vodafone Careers</a></h5> 
+<h5><a href='https://vodafone.referrals.selectminds.com/jobs/privacy-operations-specialist-57814'>Privacy Operations Specialist - Vodafone Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-06-26</p>
 <hr/>
@@ -350,7 +350,7 @@ and data protection risks in connection with Everlaw's products, services, and?.
 <p><span class="badge badge-light">California</span></p>
 <p>Posted on: 2019-06-03</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/retailindia/jobs/1621589'>Job Application for Privacy Specialist at Endurance International Group - India</a></h5> 
+<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1621589'>Job Application for Privacy Specialist at Endurance International Group - India</a></h5> 
 <p><span class="badge badge-light">Mumbai</span></p>
 <p>Posted on: 2019-05-31</p>
 <hr/>
@@ -405,7 +405,7 @@ affect?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-05-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
+<h5><a href='https://jobs.jobvite.com/ringcentral/job/o6FU9fwy'>RingCentral Careers - Privacy Analyst</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-04-30</p>
 <hr/>
